--- a/src/app/resize/resize.component.css
+++ b/src/app/resize/resize.component.css
@@ -1,6 +1,8 @@
-/* HORIZONTAL - DEFAULT RESIZE*/
-.resize {
+:host {
   position: relative;
+}
+
+.resize {
   width: 600px;
   height: 100%;
   min-height: 30px;
@@ -41,7 +43,8 @@
   position: relative;
   width: 100%;
   height: 100px;
-  padding-bottom: 10px;
+  overflow-x: hidden;
+  overflow-y: overlay;
 }
 
 .spacer--vertical {
@@ -55,6 +58,7 @@
 }
 
 .spacer--vertical .handle {
+  width: 100%;
   height: 10px;
   border: 0;
   border-top: 1px dashed #888;
